third_party/move/move-compiler-v2/tests/more-v1/expansion/spec_block_uses.exp

Diagnostics:
error: cannot use `u256` with an operator which expects a value of type `address`
   ┌─ tests/more-v1/expansion/spec_block_uses.move:12:32
   │
12 │         ensures exists<S<u64>>(0x1) == exists<R>(0x1);
   │                                ^^^

error: cannot use `u256` with an operator which expects a value of type `address`
   ┌─ tests/more-v1/expansion/spec_block_uses.move:12:50
   │
12 │         ensures exists<S<u64>>(0x1) == exists<R>(0x1);
   │                                                  ^^^

error: `ensures` not allowed in module context
   ┌─ tests/more-v1/expansion/spec_block_uses.move:12:9
   │
12 │         ensures exists<S<u64>>(0x1) == exists<R>(0x1);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
